Prevent sign edit event cancelling other mods